<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sample App for Test Automation</string>
    <string name="hello_world">Welcome to Test Application</string>
    <string name="hello_sign_up">Welcome to Sign-Up Page</string>
    <string name="action_settings">Settings</string>
    <string name="Submit">login</string>
    <string name="TextView">Enter credentials or Sign-up</string>
    <string name="TextView_sign_up">Please fill-out the fom then click sign-up button</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="re_password">re-type password</string>
    <string name="home_message">Welcome to Home Page</string>
    <string name="sign_up">sign-up</string>
    <string name="title_activity_sin_up">SinUp</string>

</resources>
