<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mesutgunes.sampleandroidprojecttoautomate.SinUp"
    android:focusable="true">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_sign_up" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView_sign_up"
        android:textColor="#2E2EFE"
        android:layout_below="@+id/re_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:layout_alignLeft="@+id/re_password" />

    <Button
        android:id="@+id/sign_up"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:minHeight="40dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/holo_green_dark"
        android:textColorHint="@android:color/holo_red_light"
        android:textSize="14sp"
        android:layout_gravity="right"
        android:hint="@string/sign_up"
        android:maxWidth="80dp"
        android:layout_alignTop="@+id/submit"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/submit"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:hint="@string/Submit"
        android:minHeight="40dp"
        android:text="@string/Submit"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="@android:color/holo_green_dark"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:clickable="false"
        android:layout_toStartOf="@+id/sign_up"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/sign_up"
        android:layout_below="@+id/message"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/re_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/re_password"
        android:inputType="textPassword"
        android:layout_below="@+id/password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_marginTop="14dp"
        android:password="false" />

</RelativeLayout>
